  Features:
    - Added mod setting for controlling the hex claim costs, intended to be lowered when lowering the trade efficiency setting to the point where infinite loops are impossible.
    - Added a fifth coin tier, black hole coins.
    - Added a GUI for viewing and managing the total array of item buffs you have unlocked.
  Minor Features:
    - Added more item buffs: rocket turret, rocket launcher
  Changes:
    - Item counts in trades no longer exceed 100 or five total stacks (whichever is smaller).
    - Item counts in trades are now more varied, where lower-valued items are generally in higher quantities than the higher-valued items on the same side of the trade.
    - Added 10x construction robots, 1x personal roboport, and 2x personal batteries to the quest reward that gives early bots + modular armor.
    - Changed the "(NEGATIVE PRODUCTIVITY)" flying text from trades to [img=virtual-signal.signal-deny].
  Balancing:
    - Lowered the default setting value for frequency of copper ore from 4.5 to 4.0, giving slightly more iron ore, coal, and stone in mixed patches but slightly less copper ore.
    - Lowered the default setting value for number of trades per hex core on Aquilo from 6 to 2.
  Gui:
    - Improved horizontal alignment of productivity labels on trade arrows.
    - Coin amounts for "Stack Value (Total)" in item tooltips are now rounded to four significant figures instead of zero digits after the decimal.
    - Added custom sprites for hexa modules, courtesy Steb GlitchyFishy.
    - Added a tooltip to the productivity meters under trades, helping to explain the difference between positive and negative productivity.
  Bugfixes:
    - Fixed that sink/generator mode did not reliably create trades with a 10:1 input-to-output efficiency.
    - Fixed missing locale for electric damage / shooting speed.
    - Fixed crash on teleporting to a hex core by hotkey while you have an equipment grid open.
    - Fixed rare crash when enhancing item buffs.