@@ -3,9 +3,11 @@ local trades = require "api.trades"
 local hex_grid = require "api.hex_grid"
 local coin_tiers = require "api.coin_tiers"
 local item_values = require "api.item_values"
+local item_buffs = require "api.item_buffs"
 local hex_state_manager = require "api.hex_state_manager"
 
 local data_coin_tiers = require "data.coin_tiers"
+local data_item_buffs = require "data.item_buffs"
 
 return function()
     trades.fetch_base_trade_efficiency_settings()
@@ -29,4 +31,6 @@ return function()
             end
         end
     end
+
+    item_buffs.migrate_buff_changes(data_item_buffs)
 end
